--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,10 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest # Use the latest Ubuntu runner
+    permissions:
+      contents: write # Required for pushing to gh-pages branch
+      pages: write # Required for GitHub Pages deployment
+      id-token: write # Required for OIDC (if used, good practice to include)
 
     steps:
       - name: Checkout # Checkout the repository
